--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ wx.path=F:\\WeChat39825\\WeChat\\WeChat.exe
 wx.port=19088
 spring.profiles.active=local
 vertx.port=8080
+logging.level.com.example=DEBUG
